src/components/screens/monitor/delegates/delegates.css
@import '../../../../app/mixins.css';

.delegateDetails {
  display: flex;
  flex-direction: row;
  align-items: center;

  & > div {
    display: flex;
    flex-direction: column;
    margin-left: 8px;

    & > .delegateName {
      @mixin headingSmall;

      margin-top: 0;
      margin-bottom: 10px;
      color: var(--color-maastricht-blue);
      font-family: var(--content-font);

      & > span {
        @mixin contentNormal;

        margin-left: 10px;
        color: black;
      }
    }

    & > .delegateAddress {
      @mixin contentNormal;

      margin: 0;
      color: var(--color-slate-gray);
    }
  }
}

.delegateWeight {
  padding-left: 0;
  padding-right: 0;

  & > span {
    display: inline-block;
  }
}

.content {
  padding: 0 !important;
}

.tabSelector {
  margin-bottom: 15px !important;
  padding-bottom: 15px !important;
}

.votesColumnTitle {
  justify-content: flex-start !important;
}

.votesColumn {
  display: inline-block;

  & .vote,
  & .unVote {
    display: inline-block;
    width: 100%;
    text-align: left;
    padding-bottom: 0;
  }

  & .icon {
    display: inline-block;
    vertical-align: top;
    width: 20px;
  }

  & .vote {
    & .icon {
      color: var(--color-deep-green);
    }
  }

  & .delegatesList {
    display: flex;
    width: calc(100% - 20px);
    word-break: break-word;
    flex-wrap: wrap;

    & span {
      display: inline;
      margin-top: 0;
      margin-bottom: 3px;

      &:not(:last-child)::after {
        content: '•';
        display: inline-block;
        padding: 0 5px;
      }
    }
  }
}

.tableRow {
  & > span {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: inherit;
    display: block;
    padding-right: 8px;
    padding-left: 8px;

    & > .delegateColumn {
      display: flex;

      & > .eyeIconTooltip {
        align-self: center;

        & > .eyeIcon {
          display: flex;
          position: relative;
          width: 28px;
          height: 28px;

          &.watchedDelegate {
            & > img {
              visibility: visible !important;
              opacity: 1 !important;
            }
          }

          & > img {
            visibility: hidden;
            opacity: 0;
            width: 18px;
          }
        }
      }

      & .tooltipContainer {
        left: -40px;

        & > main > .watchedTooltip {
          @mixin contentNormal bold;
        }
      }
    }
  }

  & > span:last-child {
    padding-left: 0px;
    padding-right: 0px;
  }

  & > .noEllipsis {
    text-overflow: initial;
  }

  &:hover {
    & > span > .delegateColumn > .eyeIconTooltip > .eyeIcon > img {
      visibility: visible;
      opacity: 1;
    }
  }
}

@media (--large-viewport) {
  .statusTitle {
    padding-right: 0;
  }
}

.statusToolip {
  white-space: nowrap;
}

.statusIconsContainer {
  overflow: visible !important;
  display: flex !important;
  flex-direction: row;
  justify-content: flex-start !important;

  & > div:first-child {
    margin-left: calc(50% - 17px);
  }

  & > div:nth-child(2) {
    margin-left: 12px;
  }
}

.statusIcon {
  max-height: 17px;
}

.delegateHeader {
  padding-left: 45px;
}

.roundStateHeader {
  padding-left: 0;
}

.delegateStatus {
  @mixin contentSmall semi-bold;

  padding: 8px 10px;
  border-radius: 3px;
  line-height: 12px;
  letter-spacing: 0.2px;
  white-space: pre-wrap;
  display: inline-block;

  &.active {
    color: var(--color-jade-green);
    background-color: var(--color-jade-green-transparent);
  }

  &.standby {
    color: var(--color-ink-blue);
    background-color: var(--color-active-tab);
  }

  &.banned {
    color: var(--color-red);
    background-color: var(--color-red-transparent);
  }

  &.punished {
    color: var(--color-maastricht-blue);
    background-color: var(--color-yellow-transparent);
  }

  &.nonEligible {
    color: var(--color-blue-gray);
    background-color: var(--color-blue-manatee-transparent);
  }
}

.loadMoreVotesBtn {
  @mixin contentLarge semi-bold;

  background-color: transparent;
  border: unset;
  color: var(--color-ultramarine-blue);
  cursor: pointer;
  margin-top: 9px;

  &:hover {
    color: var(--color-maastricht-blue);
  }
}

